--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <title>SurveyForm</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Sidó Norbert János">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="flex flex-row justify-center items-center h-screen w-full">
   <app-root></app-root>
 </body>
 </html>
